--- a/src/main.css
+++ b/src/main.css
@@ -12,8 +12,10 @@
 }
 
 .cardheadcontainer {
-  top: -40px;
+  height: 100px;
+  top: -50px;
   position: relative;
+  overflow: hidden;
 }
 
 .carouselhead {
